fixed some bugs but still not showing movie details

--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-color: #589ed3; */
-  background-image: url('https://s.studiobinder.com/wp-content/uploads/2021/07/What-is-the-Studio-System-%E2%80%94-Hollywood-s-Studio-Era-Explained-Featured.jpg');
-  background-size: 100%;
+  background-color: #f1f5f8;
   color: #112942;
 }
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -22,22 +19,22 @@ body {
   padding: 60px 30px 30px 30px;
 }
 .title {
-  margin-top: -30px;
   color: #112942;
 }
 .search-input {
   width: 100%;
   max-width: 500px;
-  border: 3px solid #112942;
+  border: none;
   padding: 16px 10px;
   border-radius: 5px;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 .error-msg {
   color: red;
   font-size: 14px;
   margin-top: 10px;
 }
+
 .content {
   padding-top: 100px;
   display: grid;
@@ -48,12 +45,10 @@ body {
 .movie {
   position: relative;
   height: 400px;
-  background-color: rgb(114, 233, 59);
 }
 .movie-img{
   width: 100%;
   height: 100%;
-  
 }
 .movie-detail {
   background-color: rgba(0,0,0,0.8);
@@ -61,28 +56,29 @@ body {
   bottom: 0;
   width: 100%;
   padding: 10px 15px;
-  color: #fff;
+  color: rgb(43, 232, 87);
   display: none;
 }
 .movie-name {
   margin-bottom: 5px;
 }
-.movie-desc{
-  margin: 20px 0;
-  color: #fff;
-}
-.bold{
-  font-weight: bold;
-}
+
 .movie:hover .movie-detail {
   display: block;
 }
+
 .row{
   display: flex;
   flex-direction: row;
 }
 .bg-img{
   margin-right: 20px;
+}
+.movie-desc{
+  margin: 20px 0;
+}
+.bold{
+  font-weight: bold;
 }
 .back-btn{
   background-color: #48a6e8;
@@ -93,3 +89,29 @@ body {
   border-radius: 5px;
 }
 
+@media screen and (max-width: 768px) {
+  .container{
+    padding: 20px;
+  }
+  .content{
+    grid-template-columns: 1fr 1fr;
+  }
+  .row{
+    flex-direction: column;
+  }
+  .bg-img{
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .content{
+    grid-template-columns: 1fr;
+  }
+  .row{
+    flex-direction: column;
+  }
+  .bg-img{
+    width: 300px;
+  }
+}
